# pyrefgraph

./: .mergify.yml  .travis.yml  README.md  default.nix  pyproject.toml  setup.py
examples/: hello_world.py  infection.py
reference_graph/: __init__.py  config.py  graph.py  infection.py  util.py
reference_graph/analysis/: __init__.py  graph.py  import_hook.py  objects.py  tracer.py
reference_graph/api/: __init__.py  infect.py
tests/: conftest.py  test_basics.py  test_import_hook.py  test_tools.py  utils.py
